# flagswitch-python-sdk

./: .gitignore  Cargo.toml  README.md  creds.md  publish.sh  pyproject.toml
flagswitch_sdk/: __init__.py  client.py  exceptions.py  helper.py
src/: lib.rs
