[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flagswitch-sdk"
version = "0.3.0"
description = "Python SDK for FlagSwitch feature flag management"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["flagswitch_sdk*"]
