[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "flagswitch-sdk"
version = "0.4.3"
description = "Python SDK for FlagSwitch feature flag management"
requires-python = ">=3.11"
dependencies = []

[tool.maturin]
python-source = "."
module-name = "flagswitch_sdk.flagswitch_core"
features = ["pyo3/extension-module"]
